# xmonad-extras

./: .travis.yml  CHANGELOG.md  README.md  RELEASES  XMonadCmd.hs  stack.yaml  xmonad-extras.cabal
.github/workflows/: tests.yml
XMonad/Actions/: Eval.hs  Invert.hs  Volume.hs
XMonad/Config/: Alt.hs
XMonad/Config/Alt/: Desktop.hs  Internal.hs  QQ.hs  Sample.hs  Sample1.hs  Sample2.hs  Types.hs
XMonad/Hooks/: EvalServer.hs  PerWindowKbdLayout.hsc
XMonad/Prompt/: Eval.hs  MPD.hs
XMonad/Prompt/MPD/: Compat.hs
XMonad/Util/: Brightness.hs  WindowPropertiesRE.hs
