name:               xmonad-extras
version:            0.15.2
homepage:           https://github.com/xmonad/xmonad-extras
synopsis:           Third party extensions for xmonad with wacky dependencies
description:        Various modules for xmonad that cannot be added to xmonad-contrib
                    because of additional dependencies.
category:           System
license:            BSD3
license-file:       LICENSE
author:             The Daniels Schoepe and Wagner
maintainer:         Sibi <sibi@psibi.in>, daniel@wagner-home.com, daniel.schoepe@googlemail.com
cabal-version:      >= 1.2.1
build-type:         Simple
extra-source-files:  README.md, CHANGELOG.md

flag with_sound
  description: Build modules depending on the alsa-mixer package

flag with_hint
  description: Build modules depending on hint(for evaluating Haskell expressions at runtime).

flag with_mpd
  description: Build modules depending on libmpd.

flag with_hlist
  description: Build modules depending on HList.
  default: False

flag with_regex_posix
  description: Build modules depending on posix-regex.

flag with_template_haskell
  description: Build modules depending on template haskell.

flag with_brightness
  description: Build module for brightness control.
  default: True

flag testing
  description: Testing mode
  default: False

library

    build-depends:      base < 5, mtl, containers, X11>=1.4.3, xmonad>=0.10, xmonad-contrib>=0.10
    ghc-options:        -fwarn-tabs -Wall -fno-warn-unused-do-bind

    -- Upload blocked by this: https://github.com/haskell/cabal/issues/2527
    -- Uncomment when it's fixed
    -- if flag(testing)
    --     ghc-options:    -Werror

    if flag(with_sound)
        build-depends: alsa-mixer >= 0.3
        exposed-modules: XMonad.Actions.Volume

    if flag(with_hint)
        build-depends: hint >= 0.3.3.3 && < 0.10, network
        exposed-modules: XMonad.Actions.Eval XMonad.Prompt.Eval
--                         XMonad.Hooks.EvalServer

    if flag(with_mpd)
        build-depends: libmpd >= 0.9 && < 0.10, bytestring >= 0.9 && < 0.11
        exposed-modules: XMonad.Prompt.MPD

    if flag(with_regex_posix)
        build-depends: regex-posix
        exposed-modules: XMonad.Util.WindowPropertiesRE

    if flag(with_brightness)
        build-depends: bytestring >= 0.9 && < 0.11
        exposed-modules: XMonad.Util.Brightness

    if flag(with_template_haskell) && flag(with_hlist)
        build-depends: template-haskell, HList >= 0.4 && < 0.5
        exposed-modules: XMonad.Config.Alt
                         XMonad.Config.Alt.Desktop
                         XMonad.Config.Alt.Sample1
                         XMonad.Config.Alt.Internal
                         XMonad.Config.Alt.QQ

        other-modules:   XMonad.Config.Alt.Types

    exposed-modules: XMonad.Hooks.PerWindowKbdLayout



-- executable xmonadcmd
--     main-is: XMonadCmd.hs
--     build-depends:      mtl, unix, X11>=1.4.3, xmonad>=0.9 && <1.0, xmonad-contrib>=0.9 && <1.0
--     ghc-options:        -Wall
--     if !flag(with_hint)
--         Buildable: False
--
--     if flag(with_hint)
--         build-depends: network
--
--     if flag(testing)
--         ghc-options:  -Werror
